# mergify-pre-commit

./: .mergify.yml  .pre-commit-hooks.yaml  README.md  pyproject.toml  renovate.json
